<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.add_note.AddNoteFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/update_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_low"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/low"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_200" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_500" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_high"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_700" />

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/update_title_et"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_chip_group" />

    <EditText
        android:id="@+id/update_content_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="12dp"
        android:paddingTop="16dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_title_et" />

</androidx.constraintlayout.widget.ConstraintLayout>